<resources>
    <string name="app_name">Chollos</string>
    <string name="init_msg">Vienvenidos a Chollos</string>
    <string name="lbl_user">Usuario</string>
    <string name="lbl_pass">Password</string>
    <string name="btn_login">Conectar</string>
    <string name="btn_lgoout">Salir</string>
    <string name="lbl_menu_changepass">Cambiar Password</string>
    <string name="menuChollosDisponibles">Chollos Disponibles</string>
    <string name="lbl_menuTopChollos">Top 5</string>
    <string name="lbl_menu_Buscador">Buscardor</string>
    <string name="lbl_menuLocalizador">Localizar Chollos</string>
    <string name="lbl_menuContacto">Contacto</string>
    <string name="lbl_menuAbout">Acerca de</string>
    <string name="lbl_menuSalir">Salir</string>
    <string name="title_activity_change_password">Change Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_change_pass">ChangePassActivity</string>
    <string name="tc_aboutTitle">Acerca de</string>
    <string name="tv_aboutMessge">ASODNFA SNANnponaposdnfo n</string>
    <string name="lbl_currentpass">Password Actual</string>
    <string name="lbl_newpass">Nuevo Password</string>
    <string name="lbl_repeatpass">Repita Password</string>
    <string name="lbl_confirm">Confirmar</string>

    <string name="icon_heart">&#xf004;</string>
</resources>
