<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" tools:context=".DashBoardActivity">
    <group >
        <item
            android:id="@+id/lbl_menuChangepass"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/lbl_menu_changepass" />
        <item android:title="@string/menuChollosDisponibles"
            android:id="@+id/lbl_menuChollosDisponibles"
            android:icon="@android:drawable/ic_menu_info_details" />
        <item android:title="@string/lbl_menuTopChollos"
            android:id="@+id/lbl_menuTopChollos"
            android:icon="@android:drawable/btn_star_big_on" />
        <item android:title="@string/lbl_menu_Buscador"
            android:id="@+id/lbl_menu_Buscador"
            android:icon="@android:drawable/ic_menu_search" />
        <item android:title="@string/lbl_menuLocalizador"
            android:id="@+id/lbl_menuLocalizador"
            android:icon="@android:drawable/ic_dialog_map" />
        <item android:title="@string/lbl_menuContacto"
            android:id="@+id/lbl_menuContacto"
            android:icon="@android:drawable/ic_dialog_email" />
        <item android:title="@string/lbl_menuAbout"
            android:id="@+id/lbl_menuAbout"
            android:icon="@android:drawable/ic_dialog_info" />
        <item android:title="@string/lbl_menuSalir"
            android:id="@+id/lbl_menuSalir"
            android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    </group>
</menu>