<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yoyo.chollos.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            style="@style/AppTheme"
            android:text="@string/init_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:fontFamily="casual"
            android:lineSpacingExtra="24sp"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:text="@string/lbl_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textColor="@android:color/holo_purple"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:textAllCaps="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_user"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="normal|bold"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:text="@string/lbl_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/holo_purple"
                android:textStyle="normal|bold"
                android:textAllCaps="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_pass"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btn_login"
                android:layout_weight="1"
                android:background="#b296d1"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textColor="?android:attr/textColorHint" />

            <Button
                android:text="@string/icon_heart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/buttonFont"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
