<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.yoyo.chollos.ChangePassActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/MyField">

                <TextView
                    android:text="@string/lbl_currentpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_currentpass"
                    android:layout_weight="1"
                    style="@style/MyField" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="5"
                    android:id="@+id/et_curentpass"
                    android:layout_weight="1"
                    style="@style/MyEditTExt" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/InputField">

                <TextView
                    android:text="@string/lbl_newpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_newpass"
                    android:layout_weight="1"
                    style="@style/MyField" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="5"
                    android:id="@+id/et_newpass"
                    android:layout_weight="1"
                    style="@style/MyEditTExt" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/lbl_repeatpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_repeatpass"
                    android:layout_weight="1"
                    style="@style/MyField" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="5"
                    android:id="@+id/et_repeatPass"
                    android:layout_weight="1"
                    style="@style/MyEditTExt" />

            </LinearLayout>

            <Button
                android:text="@string/lbl_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/btn_changePassword"
                android:layout_weight="1"
                style="@style/MyBotonGrey" />
        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
